k8s/manifests-58fc59/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-58fc59
  namespace: journee
  labels:
    app: journee-58fc59
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-58fc59
  template:
    metadata:
      labels:
        app: journee-58fc59
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-58fc59
          image: gcr.io/my-docker-471807/journee:v5.1.0
          ports:
            - containerPort: 3000
