k8s/manifests-58fc59/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-58fc59
  namespace: journee
spec:
  selector:
    app: journee-58fc59
  ports:
    - port: 80
      targetPort: 3000
